fix anchor icon on mobile devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -262,7 +262,6 @@
       margin: 0 0.125em;
       mask-repeat: no-repeat;
       mask-position: center;
-      clip-path: padding-box inset(0.28125em 0);
       background-color: transparent;
       transition: background-color 0.4s ease-in-out;
     }
